--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:name=".App"
@@ -14,15 +15,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GestRenacer"
         tools:targetApi="31">
+
+
         <activity
-            android:name=".view.MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="true">
+        </activity>
+
+
+        <activity
+            android:name=".VerifyActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
